--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Indecision App</title>
+    <title>Build It!</title>
 </head>
 <body>
     <div id="app"></div>
